Fix broken css

--- a/PokerPlanningClient/web/pokerplanning.css
+++ b/PokerPlanningClient/web/pokerplanning.css
@@ -74,7 +74,7 @@ header {
     border: 0;
 }
 
-.cardContainer {
+.cardsContainer {
     vertical-align: bottom;
     display: inline-block;
 }
